# constraint-to-coq

./: .gitignore  .gitmodules  CHANGELOG.md  cabal.project  constraint-to-coq.cabal
src/: ConstraintToCoq.hs  ExternalProof.hs
