cabal-version:       2.4
name:                constraint-to-coq
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Zubin Duggal
maintainer:          zubin@cmi.ac.in
category:            Language
extra-source-files:  CHANGELOG.md

library
  exposed-modules: ConstraintToCoq, ExternalProof
  build-depends:       base ^>=4.12.0.0, ghc, hs-to-coq, text, mtl, containers,
                       filepath, directory, deepseq, process
  hs-source-dirs:      src
  ghc-options:         -Wall
  default-language:    Haskell2010
